# Nexus-Runtime

./: .clippy.toml  .gitattributes  .gitignore  Cargo.toml  LICENSE-MIT  Nexus_Runtime_PRD_v1.0.md  README.md  deny.toml  docker-compose.lite.yml  docker-compose.pro.yml  td.md
.github/workflows/: ci.yml
adapters/hermes/: Cargo.toml
adapters/hermes/src/: lib.rs
adapters/openclaw/: Cargo.toml
adapters/openclaw/src/: lib.rs
crates/nexus-cli/: Cargo.toml
crates/nexus-cli/src/: main.rs
crates/nexus-coordinator/: Cargo.toml
crates/nexus-coordinator/src/: lib.rs
crates/nexus-core/: Cargo.toml
crates/nexus-core/benches/: benchmarks.rs
crates/nexus-core/src/: checkpoint.rs  effects.rs  entropy.rs  event.rs  export.rs  golden_tests.rs  lib.rs  llm_proxy.rs  memory.rs  migration.rs  protocol.rs  recovery.rs  state_machine.rs  types.rs  vault.rs  wasm_worker.rs  worker_spawner.rs
crates/nexus-event-store/: Cargo.toml  schema.sql  schema_postgres.sql
crates/nexus-event-store/src/: lib.rs  postgres.rs  rows.rs  sqlite.rs  store.rs
crates/nexus-message-bus/: Cargo.toml
crates/nexus-message-bus/src/: lib.rs
crates/nexus-metrics/: Cargo.toml
crates/nexus-metrics/src/: lib.rs
crates/nexus-rpc/: Cargo.toml
crates/nexus-rpc/src/: lib.rs
crates/nexus-scheduler/: Cargo.toml
crates/nexus-scheduler/src/: docker.rs  docker_real.rs  k8s.rs  k8s_real.rs  lib.rs  local.rs
crates/nexus-security/: Cargo.toml
crates/nexus-security/src/: lib.rs
crates/nexus-temporal/: Cargo.toml
crates/nexus-temporal/src/: lib.rs
crates/phoenix-tests/: Cargo.toml
crates/phoenix-tests/src/: lib.rs
dashboard/: index.html
docs/: architecture.md
docs/adr/: ADR-001-deterministic-runtime.md  ADR-002-temporal-substrate.md  ADR-003-llm-events.md  ADR-004-authority-boundary.md  ADR-005-governance-hot-cold.md
docs/api/: index.md
docs/protocol/: event-schema.md  overview.md  serialization.md  state-machine.md  worker-protocol.md
docs/tutorials/: getting-started.md  worker-development.md
fixtures/: checkpoint_v0.msgpack
k8s/enterprise/: nexus-deployment.yaml
marketplace/: registry.py
marketplace/skills/: README.md
policies/rego/: budget.rego  capabilities.rego
scripts/: demo.sh
sdk/nodejs/: package.json
sdk/nodejs/src/: index.d.ts  index.js
sdk/python/: setup.py
sdk/python/nexus/: __init__.py  budget.py  event.py  memory.py  runtime.py  session.py
sdk/rust/: Cargo.toml
sdk/rust/src/: lib.rs
workers/node-worker/: main.js  package.json
workers/python-worker/: __init__.py  main.py  requirements.txt
workers/rust-worker/: Cargo.toml
workers/rust-worker/src/: main.rs
