[package]
name = "nexus-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "nexus"
path = "src/main.rs"

[dependencies]
nexus-core = { path = "../nexus-core" }
nexus-event-store = { path = "../nexus-event-store" }
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
serde.workspace = true
hex.workspace = true
