[package]
name = "nexus-coordinator"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nexus-core = { path = "../nexus-core" }
nexus-event-store = { path = "../nexus-event-store" }
nexus-message-bus = { path = "../nexus-message-bus" }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros"] }
tracing.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
