[package]
name = "nexus-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
rmp-serde.workspace = true
blake3.workspace = true
hex.workspace = true
sha2.workspace = true
thiserror.workspace = true
uuid.workspace = true
serde_json.workspace = true
zstd.workspace = true
tracing.workspace = true
rand.workspace = true
hmac.workspace = true
sha3.workspace = true

[dev-dependencies]
hex-literal.workspace = true
tempfile.workspace = true
tokio.workspace = true
criterion.workspace = true

[[bench]]
name = "benchmarks"
harness = false
