[package]
name = "nexus-event-store"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
nexus-core = { path = "../nexus-core" }
serde.workspace = true
rmp-serde.workspace = true
blake3.workspace = true
hex.workspace = true
thiserror.workspace = true
tokio.workspace = true
sqlx.workspace = true
async-trait.workspace = true
tracing.workspace = true
uuid.workspace = true
zstd.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
