[package]
name = "nexus-message-bus"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nexus-core = { path = "../nexus-core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
