[package]
name = "nexus-temporal"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nexus-core = { path = "../nexus-core" }
nexus-event-store = { path = "../nexus-event-store" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
async-trait.workspace = true
uuid.workspace = true
hex.workspace = true

[dev-dependencies]
tempfile.workspace = true
