[package]
name = "phoenix-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
nexus-core = { path = "../nexus-core" }
nexus-event-store = { path = "../nexus-event-store" }
serde.workspace = true
rmp-serde.workspace = true
blake3.workspace = true
hex.workspace = true
thiserror.workspace = true
tokio.workspace = true
sqlx.workspace = true
async-trait.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tempfile.workspace = true
nix.workspace = true
uuid.workspace = true
